index-room-number

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
             type="text"
             placeholder="Username"
           />
-          <div class="roomNameBar">Roomname</div>
+          <div class="roomNameBar">Room Number</div>
           <input
             id="roomName"
             class="userNameInput"
